# pricing-engine

./: .gitignore  AI_USAGE.md  ARCHITECTURE.md  BENCHMARKS.md  DESIGN.md  LATENCY_STUDY.md  LICENSE  README.md  docker-compose.yml
dashboard/: Dockerfile  app.py  data_source.py
dashboard/.streamlit/: config.toml
docs/: latency_results.csv
engine/: CMakeLists.txt  Dockerfile
engine/bench/: bench_latency.cpp  bench_throughput.cpp
engine/include/: config.h  consolidated_book.h  events.h  inventory.h  latency_buffer.h  liquidity_taker.h  lp_simulator.h  metrics_publisher.h  order.h  order_pool.h  pricing_engine.h  signal_generator.h  spsc_queue.h  types.h
engine/src/: consolidated_book.cpp  inventory.cpp  liquidity_taker.cpp  lp_simulator.cpp  main.cpp  metrics_publisher.cpp  pricing_engine.cpp  signal_generator.cpp
scripts/: plot_latency_results.py  run_latency_sweep.sh
